wrong colour fixed

--- a/static/src/stylesheets/module/content-garnett/_pillars.scss
+++ b/static/src/stylesheets/module/content-garnett/_pillars.scss
@@ -253,8 +253,7 @@
 }
 @mixin mediaPalatte($mediaColor, $pillar) {
     .content__section-label__link,
-    .youtube-media-atom__bottom-bar__duration,
-    .u-underline[href] {
+    .youtube-media-atom__bottom-bar__duration {
         color: $mediaColor;
     }
 
